# evproj-APC

./: .clang-format  .gitignore  APC.code-workspace  Cargo.toml  Makefile  README.md  memory.x
.cargo/: config
kernel/: .mxproject  APC.ioc  Makefile
kernel/Core/Inc/: stm32f1xx_hal_conf.h
kernel/Core/Src/: main.c
kernel/Drivers/CMSIS/Device/ST/STM32F1xx/Include/: stm32f1xx.h
kernel/USB_DEVICE/App/: usb_device.c  usbd_cdc_if.c
schematics/Protoboard v0.1/: notes.txt
scripts/: build.sh  connect_openocd.bat  connect_openocd.sh  deploy.bat  deploy.sh
src/: hw_util.c  hw_util.h  logic.rs  main.c  main.rs  pdu_logic.h  pin_map.h  syscalls.c  time.rs  usb_handler.c  usb_handler.h  user_main.c
